feat: complete /alerts/firing/all Handler
